force-app/main/default/objects/Chatter_Auto_Add_Users__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The custom setting used to set which Chatter group new and updated users should be added to based on their profile.</description>
    <fields>
        <fullName>Chatter_Group_Name__c</fullName>
        <description>The Chatter group to associate with the given Profile name</description>
        <label>Chatter Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationFrequency__c</fullName>
        <description>The values could be D—Daily, W—Weekly, N—Never, P—On every post
https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/sforce_api_objects_collaborationgroupmember.htm</description>
        <inlineHelpText>The values could be single letter, D—Daily, W—Weekly, N—Never, P—On every post.</inlineHelpText>
        <label>NotificationFrequency</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeopleSoft_Role__c</fullName>
        <description>This field stores the PeopleSoft User role, which is mapped to the relevant Chatter Group.</description>
        <label>PeopleSoft Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>The Profile name to be added to the group.</description>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Permission_Sets__c</fullName>
        <description>Required Permission Set API name for adding the user to this chatter group. Leave this blank if no permission set is required.</description>
        <inlineHelpText>Enter the required Permission Set API name for adding the user to this chatter group. Leave this blank if no permission set is required.</inlineHelpText>
        <label>Required Permission Sets</label>
        <type>TextArea</type>
    </fields>
    <label>Chatter Auto Add Users</label>
    <listViews>
        <fullName>All_Chatter_Settings</fullName>
        <columns>NAME</columns>
        <columns>PeopleSoft_Role__c</columns>
        <columns>Chatter_Group_Name__c</columns>
        <columns>NotificationFrequency__c</columns>
        <columns>Profile__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Chatter Settings</label>
    </listViews>
</CustomObject>