force-app/main/default/objects/Chatter_Auto_Add_Users__c/listViews/All_Chatter_Settings.listView-meta.xml
<ListView>
    <fullName>All_Chatter_Settings</fullName>
    <columns>NAME</columns>
    <columns>PeopleSoft_Role__c</columns>
    <columns>Chatter_Group_Name__c</columns>
    <columns>NotificationFrequency__c</columns>
    <columns>Required_Permission_Sets__c</columns>
    <columns>Profile__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Chatter Settings</label>
</ListView>